# Kompute

./: K.txt  img.txt  tmp_kp_shader.comp  tmp_kp_shader.comp.spv
example_array_multiplication/: CMakeLists.txt
example_array_multiplication/src/: Main.cpp
